Add player photo URL support to API
